# ciencia-datos-moderna

./: 001_video.qmd  002_video.qmd  003_video.qmd  _quarto.yml  index.qmd  pyproject.toml
_site/: index.html
docs/: 001_video.html  002_video.html  003_video.html  index.html  search.json
docs/sesiones/notebooks_001_narrativa_uv_git/: 001_narrativa.html  002_miniconda_terminal.html  003_uv.html  004_git.html
docs/sesiones/notebooks_002_matplotlib_seaborn_plotly/: 000_Conoce_los_datos.html  001_matplotlib.html  002_Seaborn.html  002_anatomia_de_una_figura.html  003_EDA_seaborn.html  003_plotly.html
docs/sesiones/notebooks_003_marimo_plotly/: 001_EDA_plotly.html  003_plotly_marimo.html
sesiones/notebooks_001_narrativa_uv_git/: 004_git.qmd
sesiones/notebooks_002_matplotlib_seaborn_plotly/: 002_anatomia_de_una_figura.ipynb  003_EDA_seaborn.ipynb
sesiones/notebooks_002_matplotlib_seaborn_plotly/.ipynb_checkpoints/: 001_matplotlib-checkpoint.ipynb  003_plotly-checkpoint.ipynb
sesiones/notebooks_003_marimo_plotly/: 001_EDA_plotly.md  001_EDA_plotly.py  003_plotly_marimo.md  003_plotly_marimo.py
