[project]
name = "ciencia-datos-moderna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "jupyter>=1.1.1",
    "marimo>=0.17.0",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]
